fix: HttpURLConnection finally 블록에 disconnect() 추가
- 소켓 누수 방지를 위해 fetchRemote()에 finally { conn.disconnect() } 적용.
- new URL(String) deprecated 생성자를 URI.create(url).toURL()으로 교체.